third_party/move/move-compiler/tests/move_check/locals/use_after_move_if.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/locals/use_after_move_if.move:5:17
  │
4 │         if (cond) { _ = move x };
  │                         ------
  │                         │
  │                         The value of 'x' might have been previously moved here.
  │                         Suggestion: use 'copy x' to avoid the move.
5 │         let _ = move x + 1;
  │                 ^^^^^^ Invalid usage of previously moved variable 'x'.

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_if.move:11:17
   │
10 │         if (cond) { _ = move x };
   │                         ------
   │                         │
   │                         The value of 'x' might have been previously moved here.
   │                         Suggestion: use 'copy x' to avoid the move.
11 │         let _ = x + 1;
   │                 ^ Invalid usage of previously moved variable 'x'.

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_if.move:17:17
   │
16 │         if (cond) { _ = move x };
   │                         ------
   │                         │
   │                         The value of 'x' might have been previously moved here.
   │                         Suggestion: use 'copy x' to avoid the move.
17 │         let _ = &x;
   │                 ^^ Invalid usage of previously moved variable 'x'.

